# roadmap-url_shortening_service

./: README.md  example.env  pyproject.toml  requirements.txt
shurl/: main.py  settings.py
shurl/api/: router.py
shurl/api/health/: router.py
shurl/auth/: models.py  routers.py  schemas.py  security.py
shurl/database/: db.py
shurl/health/: router.py
shurl/pages/: router.py
shurl/pages/templates/: base.html  home.html  login.html  nav.html  not_found.html
shurl/shorten/: models.py  routers.py  schemas.py
shurl/tests/: auth_test.py  conftest.py  health_test.py  shorten_test.py
