[project]
name = "url-shortener"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beanie>=1.29.0",
    "environs>=14.1.0",
    "fastapi[standard]>=0.115.6",
    "httpx>=0.28.1",
    "isort>=5.13.2",
    "jinja2>=3.1.5",
    "motor[srv]==3.4.0",
    "pymongo[srv]==4.8.0",
    "sqlalchemy>=2.0.37",
]
