[project]
name = "url-shortener"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asgi-lifespan>=2.1.0",
    "bcrypt>=4.2.1",
    "beanie>=1.29.0",
    "black>=24.10.0",
    "environs>=14.1.0",
    "faker>=33.3.1",
    "fastapi[standard]>=0.115.6",
    "httpx>=0.28.1",
    "isort>=5.13.2",
    "jinja2>=3.1.5",
    "motor[srv]==3.4.0",
    "passlib>=1.7.4",
    "pyjwt>=2.10.1",
    "pymongo[srv]==4.8.0",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.2",
    "sqlalchemy>=2.0.37",
]
